@@ -12,7 +12,6 @@ import plugin.CGroup.types.Group;
 import java.io.File;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class CchCompleter implements TabCompleter {
     public List<String> onTabComplete(CommandSender sender, Command command, String alias, String[] args) {
@@ -28,12 +27,12 @@ public class CchCompleter implements TabCompleter {
         FileConfiguration data = YamlConfiguration.loadConfiguration(new File(Bukkit.getPluginManager().getPlugin("CX").getDataFolder(), "groupdata.yml"));
         if (args.length == 1) {
             if (data.getConfigurationSection("groups") != null) {
-                completions = data.getConfigurationSection("groups").getKeys(false).stream().map(key -> data.getObject("groups." + key, Group.class)).map(group -> group.getAlias()).collect(Collectors.toList());
+                completions = data.getConfigurationSection("groups").getKeys(false).stream().map(key -> data.getObject("groups." + key, Group.class)).map(group -> group.getAlias()).toList();
                 completions.add("ALL");
             } else
                 completions = Arrays.asList("ALL");
         } else
             completions = Arrays.asList("");
-        return completions.stream().filter(argument -> argument.indexOf(args[args.length - 1]) == 0).sorted().collect(Collectors.toList());
+        return completions.stream().filter(argument -> argument.indexOf(args[args.length - 1]) == 0).sorted().toList();
     }
 }
